Cambios en el POC

--- a/POC/.env
+++ b/POC/.env
@@ -1,3 +1,2 @@
-REACT_APP_OKTA_DOMAIN=https://dev-w425j2q1a431gpdw.us.auth0.com
+REACT_APP_OKTA_DOMAIN=https://dev-w425j2q1a431gpdw.us.okta.com
 REACT_APP_OKTA_CLIENT_ID=AzrNIzpdapSkqzh4q1zUJRYZUX3KsXlD
-REACT_APP_OKTA_AUDIENCE=api://default
