--- a/POC/frontend/package.json
+++ b/POC/frontend/package.json
@@ -1,24 +1,19 @@
 {
   "name": "data-pura-vida-frontend",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "dependencies": {
-    "@mui/material": "^5.10.0",
-    "@okta/okta-auth-js": "^6.0.0",
-    "@okta/okta-react": "^6.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.3.0",
-    "react-toastify": "^9.0.8"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "axios": "^1.4.0"
+  },
+  "devDependencies": {
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
-  "devDependencies": {
-    "react-scripts": "4.0.3"
-  },
+  "proxy": "http://192.168.1.79:5001",
   "browserslist": {
     "production": [
       ">0.2%",
